apps/mail-autoconfig/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-mail-autoconfig
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
  labels:
    app.kubernetes.io/part-of: public-cluster
    app.kubernetes.io/managed-by: argocd
    core.sedware.net/owner: platform
    core.sedware.net/purpose: application
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
